Fixed header spacing

--- a/lesson3/styles/base.css
+++ b/lesson3/styles/base.css
@@ -43,6 +43,7 @@ h1{
     font-family: 'Oleo Script', cursive;
     font-size: 3rem;
     padding: 15px;
+    line-height: 2.5rem;
 }
 h2 {
     font-family: 'Oleo Script', cursive;
